# Logic-Filter

./: .flake8  .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  LogicFilter.py  Meta-Prompt Template.md  README.md  api.py  config.py  main.py  ollama_service_manager.py  processing_functions.py  processing_history.py  pyproject.toml  requirements.txt  settings.json  settings_manager.py  test_api.py  ui_components.py
Core_Framework/: Comprehensive_Problem_Solving_Framework.md  MASTER_Document.txt  Unified_Problem_Solving_Guide.txt  comprehensive_ai_technical_framework.md  enhanced_ai_framework_2.0.md
Documentation/: New Text Document.txt  Problem Solving Document.txt  problem Solving Prompt.txt
Final_Framework/: AI_Decision_Matrix.md  AI_Learning_Systems.md  AI_Learning_and_Improvement.md  Advanced_Thinking_Methods.md  Assessment_and_Mastery.md  Bot_Implementation.py  Conveyor_System_Methodology.md  Core_Master_Framework.md  Decision_Frameworks.md  First_Principles_and_Advanced_Thinking.md  Master_AI_Problem_Solving_Framework.md  Master_Framework.md  Problem_Solving_Components.md  README.md  Technical_Documentation.md  Technical_Implementation_Guide.md
Implementation_and_Technical/: AI_Enhancement_Seed.txt  AI_Practical_Implementation.txt  adaptive_problem_solver.ps1  adaptive_problem_solver.txt  first_principles_analyst.ps1  thought_experimenter.ps1
PROBLEM SOLVER BOT/: Enhanced Problem Solver Logic - Grok.url  problem-solving-guide.md  problemsolved.py
Principles_and_Methodologies/: ADAPTIVE PROBLEM SOLVER.txt  AI Problem-Solving Matrix.txt  FirstPrinciples.txt  (+1 more)
(+14 files in other folders)
