[project]
name = "logic-filter"
version = "1.0.0"
description = "A GUI application that analyzes, improves, and refines prompts using a multi-model approach"
authors = [{name = "Logic Filter Team"}]
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.0",
    "customtkinter>=5.2.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "pytest>=7.4.0",
    "requests>=2.31.0",
    "ttkthemes>=3.2.2",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "customtkinter.*",
    "ttkthemes.*",
    "ollama.*",
]
ignore_missing_imports = true
